--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 <body>
     
     <main class="contenedor">
-        <h1> Renovacion Carismática Católica - San Alfonso  </h1>
+        <div class="hero">
+            <h4> "Porque donde están dos o tres reunidos en mi nombre, allí estoy yo en medio de ellos." Mateo 18:20</h4>
+            
+        </div>
+
         <div class="nav">
             <a href="index.html" class="btn btn-verde"> Home </a>
             <a href="#" class="btn btn-azul" > Portafolio  </a>
